Add ES Modules polifyll

--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   },
   "devDependencies": {
     "live-server": "1.2.0"
+  },
+  "dependencies": {
+    "browser-es-module-loader": "0.4.1"
   }
 }
